--- a/play.html
+++ b/play.html
@@ -6,22 +6,41 @@
     #html, #body {
       height: 100%;
       width: 100%;
+      overflow: hidden;
+      background-color: #fff;
     }
 
     #secondHand {
       position: absolute;
 
-      top: 0;
-      left: 0;
+      top: 10%;
+      left: 49.8%;
 
-      width: 100%;
-      height: 100%;
+      width: 0.4%;
+      min-width: 1px;
+      height: 89.5%;
 
+      background-color: red;
+
+      -webkit-transform:rotate(0deg);
+    }
+
+    #clockarc { 
+      position: absolute;
+      
+      bottom: 0; left: 0;
+      width: 100%; height: 50%;
+
+      background-color: #000;
+      border-radius: 75% 75% 0 0 / 150% 150% 0 0   ; 
+      border-top: thick solid #aaa;
+      border-left: thick solid #aaa;
     }
   </style>
 
 </head>
 <body>
+  <div id="clockarc"></div>
   <div id="secondHand"></div>
 </body>
 <!--
