--- a/play.html
+++ b/play.html
@@ -13,34 +13,42 @@
     #secondHand {
       position: absolute;
 
-      top: 10%;
+      bottom: 0;
       left: 49.8%;
 
       width: 0.4%;
       min-width: 1px;
-      height: 89.5%;
+      height: 80%;
 
       background-color: red;
 
       -webkit-transform:rotate(0deg);
     }
 
-    #clockarc { 
+    .clock {
       position: absolute;
-      
-      bottom: 0; left: 0;
-      width: 100%; height: 50%;
+      bottom: 0; left:0;
+      border-radius: 75% 75% 0 0 / 150% 150% 0 0;
+      border: 0px solid black;
+    }
+
+    #clockborder { 
+      width: 100%; height: 90%;
 
       background-color: #000;
-      border-radius: 75% 75% 0 0 / 150% 150% 0 0   ; 
-      border-top: thick solid #aaa;
-      border-left: thick solid #aaa;
+    }
+
+    #clockbody {
+      width: 95%; height: 85%;
+      background-color: #eee;
+      margin-left: 2.5%;
     }
   </style>
 
 </head>
 <body>
-  <div id="clockarc"></div>
+  <div id="clockborder" class="clock"></div>
+  <div id="clockbody" class="clock"></div>
   <div id="secondHand"></div>
 </body>
 <!--
