Playing with hands. Setting the details in CSS seems like it's going to be unlikely to be successful. The dimensions of the screen change enough that relative percents when the lines are position by their top/left gets rotated around their center point it becomes extremely difficult to base where they're going to end up. Need to do it with the maths.

--- a/play.html
+++ b/play.html
@@ -10,6 +10,36 @@
       background-color: #fff;
     }
 
+    #hourHand {
+      position: absolute;
+
+      top: 52%;
+      left: 29.8%;
+
+      width: 4%;
+      min-width: 4px;
+      height: 60%;
+
+      background-color: black;
+
+      -webkit-transform:rotate(-60deg);
+    }
+
+    #minuteHand {
+      position: absolute;
+
+      top: 47%;
+      left: 67%;
+
+      width: 2%;
+      min-width: 2px;
+      height: 65%;
+
+      background-color: black;
+
+      -webkit-transform:rotate(60deg);
+    }
+
     #secondHand {
       position: absolute;
 
@@ -49,6 +79,8 @@
 <body>
   <div id="clockborder" class="clock"></div>
   <div id="clockbody" class="clock"></div>
+  <div id="hourHand"></div>
+  <div id="minuteHand"></div>
   <div id="secondHand"></div>
 </body>
 <!--
