--- a/index.html
+++ b/index.html
@@ -1,115 +1,7 @@
-<!DOCTYPE html>
-<head>
-  <title>10after10.com - Post-parenting Projects</title>
-
-  <style>
-    html, body {
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      background-color: #ddd;
-
-      font-family: sans-serif;
-      font-size: 16pt;
-    }
-
-    #hourHand {
-      position: absolute;
-
-      top: 52%;
-      left: 29.8%;
-
-      width: 4%;
-      min-width: 4px;
-      height: 60%;
-
-      background-color: black;
-
-      -webkit-transform:rotate(-60deg);
-    }
-
-    #minuteHand {
-      position: absolute;
-
-      top: 47%;
-      left: 67%;
-
-      width: 2%;
-      min-width: 2px;
-      height: 65%;
-
-      background-color: black;
-
-      -webkit-transform:rotate(60deg);
-    }
-
-
-    #secondHand {
-      position: absolute;
-
-      bottom: 0;
-      left: 49.8%;
-
-      width: 0.4%;
-      min-width: 1px;
-      height: 80%;
-
-      background-color: red;
-
-      -webkit-transform:rotate(0deg);
-    }
-
-    .clock {
-      position: absolute;
-      bottom: 0; left:0;
-      border-radius: 75% 75% 0 0 / 150% 150% 0 0;
-      border: 0px solid black;
-    }
-
-    #clockborder { 
-      width: 100%; height: 90%;
-
-      background-color: #000;
-    }
-
-    #clockbody {
-      width: 95%; height: 85%;
-      background-color: #eee;
-      margin-left: 2.5%;
-    }
-
-    #content {
-      position: absolute;
-
-      top: 0%; left: 10%;
-      width: 80%; height: 90%;
-
-      background-color: #eee;
-      opacity: .95;
-
-      overflow: auto;
-    }
-
-    #content h1 {
-      margin-top: 30%;
-      margin-left: 20%;
-      height: 40%;
-      font-size: 2em;
-    }
-    
-    #content h2 .projectId {
-      margin-left: 20%;
-      color: red;
-    }
-    #content p {
-      width: 60%;
-      margin-left: 20%;
-      margin-right: 20%;
-    }
-  </style>
-
-</head>
-<body>
+--- 
+layout: default 
+title: Post-parenting projects 
+---
   <div id="clockborder" class="clock"></div>
   <div id="clockbody" class="clock"></div>
   <div id="hourHand"></div>
@@ -142,10 +34,3 @@
       - Rob Drimmie. 22 March, 2012
     </p>
   </div>
-</body>
-<!--
-Okay, so here's my thinking. The background is the top half of a clock,
-hour hand at ten, minute hand at two. On the main page the second hand
-is at the 12, and on each project page it goes up by a second. 
-Can I figure out how to do this in CSS.
--->
